Added proto3 support for parser New parser for better performance and much better handling of errors and options